looking for send button issue - found it css z-index fixed

--- a/src/app/a5-chat-window/a5-chat-window.component.css
+++ b/src/app/a5-chat-window/a5-chat-window.component.css
@@ -253,6 +253,7 @@
   height: 50px;
   padding-top: 0;
   padding-bottom: 0;
+  z-index: 1;
 }
 #message-submission div {
   display: -webkit-box;
